<resources>
    <string name="app_name">CitrusPayAssignment</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_activity_title_text">Pay</string>
    <string name="main_activity_login_btn_text">Login</string>
    <string name="main_activity_login_btn_pay_text">Pay</string>

    <!--USER PROMPT-->
    <string name="email_id_empty_text">Email ID is empty.</string>
    <string name="email_id_invalid_text">Email ID is invalid.</string>

    <!--LOGIN-->
    <string name="email_id_hint_text">Email ID</string>
    <string name="password_hint_text">Password</string>
    <string name="mobile_hint_text">Mobile</string>

   <!--DASHBOARD-->
    <string name="dashboard_user_balance_text">Your Balance is : </string>
    <string name="dashboard_logout_btn_text">Logout</string>
    <string name="dashboard_my_balance_btn_text">My Balance</string>
    <string name="logout_failed_msg">Logout failed. please try again.</string>

    <!--CARD DETAILS-->
    <string name="card_number_hint">Enter card number</string>
    <string name="card_name_hint">Enter card holder name</string>
    <string name="card_nick_name_hint">Enter nick name</string>
    <string name="card_number_text">Card Number</string>
    <string name="card_holder_name_text">Card Holder Name</string>
    <string name="nick_name_text">Nick Name</string>
    <string name="expiry_date_text">Expiry Date</string>
    <string name="expiry_date_hint_text">MM/YY</string>
    <string name="card_cvv_text">CVV</string>
    <string name="card_cvv_hint_text">CVV</string>
    <string name="load_text">Load</string>
    <string name="please_wait_message_text">Please Wait..</string>

</resources>
